--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,20 @@ body {
   color: #444444;
 }
 
+/* Hide scroll bars while allowing scroll behavior */
+body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+}
+
+body::-webkit-scrollbar {
+  width: 0em;
+}
+
+body::-webkit-scrollbar-thumb {
+  /* background-color: rgba(0, 0, 0, 0); Adjust as needed */
+}
+
 a {
   color: #1acc8d;
   text-decoration: none;
@@ -211,10 +225,10 @@ h6 {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: "Poppins", sans-serif;
-  color: rgba(255, 255, 255, 0.7);
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255 255 255);
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -443,12 +457,13 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  background: url("../img/hero-bg.jpg");
+  /* background: url("../img/hero-bg.jpg"); */
   position: relative;
-  padding: 120px 0 0 0;
+  /* padding: 120px 0 0 0; */
+  min-height: 50vh;
 }
 
-#hero:before {
+/* #hero:before {
   content: "";
   background: rgba(2, 5, 161, 0.91);
   position: absolute;
@@ -456,14 +471,14 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-}
+} */
 
 #hero h1 {
   margin: 0 0 20px 0;
   font-size: 48px;
-  font-weight: 700;
+  font-weight: bolder;
   line-height: 56px;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255);
 }
 
 #hero h1 span {
@@ -472,7 +487,7 @@ h6 {
 }
 
 #hero h2 {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255);
   margin-bottom: 40px;
   font-size: 24px;
 }
@@ -629,7 +644,7 @@ section {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat";
 }
 
 .section-title h2::after {
@@ -647,7 +662,7 @@ section {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #010483;
 }
 
@@ -711,6 +726,128 @@ section {
   .breadcrumbs ol li {
     display: inline-block;
   }
+}
+
+/*--------------------------------------------------------------
+# About us Banner Section
+--------------------------------------------------------------*/
+#aboutusbanner {
+  width: 100%;
+  /* background: url("../img/hero-bg.jpg"); */
+  background: url("../img/Contact-Us.gif");
+  position: relative;
+  padding: 120px 0 0 0;
+}
+
+#aboutusbanner:before {
+  content: "";
+  /* background: rgba(2, 5, 161, 0.91); */
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#aboutusbanner h1 {
+  margin: 0 0 20px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+#aboutusbanner h1 span {
+  color: #fff;
+  border-bottom: 4px solid #1acc8d;
+}
+
+#aboutusbanner h2 {
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 40px;
+  font-size: 24px;
+}
+
+#aboutusbanner .btn-get-started {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #fff;
+  background: #1acc8d;
+}
+
+#aboutusbanner .btn-get-started:hover {
+  background: #17b57d;
+}
+
+#aboutusbanner .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@media (min-width: 1024px) {
+  #aboutusbanner {
+    background-attachment: fixed;
+  }
+}
+
+@media (max-width: 991px) {
+  #aboutusbanner {
+    padding-top: 80px;
+  }
+
+  #aboutusbanner .animated {
+    animation: none;
+  }
+
+  #aboutusbanner .aboutusbanner-img {
+    text-align: center;
+  }
+
+  #aboutusbanner .aboutusbanner-img img {
+    max-width: 50%;
+  }
+
+  #aboutusbanner h1 {
+    font-size: 28px;
+    line-height: 32px;
+    margin-bottom: 10px;
+  }
+
+  #aboutusbanner h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  #aboutusbanner .aboutusbanner-img img {
+    width: 80%;
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+.aboutusbanner-waves {
+  display: block;
+  margin-top: 60px;
+  width: 100%;
+  height: 60px;
+  z-index: 5;
+  position: relative;
 }
 
 /*--------------------------------------------------------------
@@ -850,6 +987,11 @@ section {
   z-index: 200;
   animation: none;
   border-radius: 0;
+}
+
+#about p {
+  line-height: 30px;
+  color: #333333;
 }
 
 @keyframes pulsate-btn {
@@ -1216,7 +1358,7 @@ section {
   font-size: 36px;
   color: #1acc8d;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin-bottom: 20px;
 }
 
@@ -1325,7 +1467,7 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 500;
@@ -1379,6 +1521,134 @@ section {
   .faq .faq-list {
     padding: 0;
   }
+}
+
+.step-label {
+  font-weight: bold;
+  font-size: medium;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+/*--------------------------------------------------------------
+# Contact us Banner Section
+--------------------------------------------------------------*/
+#contactbanner {
+  width: 100%;
+  /* background: url("../img/hero-bg.jpg"); */
+  background: url("../img/Contact-Us.gif");
+  position: relative;
+  padding: 120px 0 0 0;
+}
+
+#contactbanner:before {
+  content: "";
+  /* background: rgba(2, 5, 161, 0.91); */
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#contactbanner h1 {
+  margin: 0 0 20px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+#contactbanner h1 span {
+  color: #fff;
+  border-bottom: 4px solid #1acc8d;
+}
+
+#contactbanner h2 {
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 40px;
+  font-size: 24px;
+}
+
+#contactbanner .btn-get-started {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  color: #fff;
+  background: #1acc8d;
+}
+
+#contactbanner .btn-get-started:hover {
+  background: #17b57d;
+}
+
+#contactbanner .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@media (min-width: 1024px) {
+  #contactbanner {
+    background-attachment: fixed;
+  }
+}
+
+@media (max-width: 991px) {
+  #contactbanner {
+    padding-top: 80px;
+  }
+
+  #contactbanner .animated {
+    animation: none;
+  }
+
+  #contactbanner .contactbanner-img {
+    text-align: center;
+  }
+
+  #contactbanner .contactbanner-img img {
+    max-width: 50%;
+  }
+
+  #contactbanner h1 {
+    font-size: 28px;
+    line-height: 32px;
+    margin-bottom: 10px;
+  }
+
+  #contactbanner h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  #contactbanner .contactbanner-img img {
+    width: 80%;
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+.contactbanner-waves {
+  display: block;
+  margin-top: 60px;
+  width: 100%;
+  height: 60px;
+  z-index: 5;
+  position: relative;
 }
 
 /*--------------------------------------------------------------
@@ -1862,6 +2132,13 @@ Buy Reporting Intro
   font-weight: 600;
   font-size: 26px;
   color: #010483;
+}
+
+#auditserviceproviderintro p,
+#plannewauditintro p,
+#buyreportingintro p {
+  line-height: 30px;
+  color: #333333;
 }
 
 .overlay-gif {
